--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,5 @@
     <div id="root"></div>
   </body>
   <footer>
-    <div id="footer"><a href="https://github.com/hawaiisa/vanillaplus-talent-calculator">Source</a></div>
+    <div id="footer"><a href="https://github.com/hawaiisa/vanillaplus-talent-calculator">test</a></div>
 </html>
